--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -659,12 +659,12 @@
                     <div class="pricing-plans">
                         <div class="plan">
                             <div class="plan-name">Monatlich</div>
-                            <div class="plan-price">19,99$</div>
+                            <div class="plan-price">19,99 CHF</div>
                             <div class="plan-period">pro Monat</div>
                         </div>
                         <div class="plan">
                             <div class="plan-name">Jährlich</div>
-                            <div class="plan-price">199$</div>
+                            <div class="plan-price">199 CHF</div>
                             <div class="plan-period">pro Jahr (16% Ersparnis)</div>
                         </div>
                     </div>
@@ -676,17 +676,17 @@
                     <div class="pricing-plans">
                         <div class="plan">
                             <div class="plan-name">Basis</div>
-                            <div class="plan-price">50$</div>
+                            <div class="plan-price">50 CHF</div>
                             <div class="plan-period">pro Monat (bis zu 50 Klienten)</div>
                         </div>
                         <div class="plan">
                             <div class="plan-name">Professional</div>
-                            <div class="plan-price">100$</div>
+                            <div class="plan-price">100 CHF</div>
                             <div class="plan-period">pro Monat (bis zu 100 Klienten)</div>
                         </div>
                         <div class="plan">
                             <div class="plan-name">Enterprise</div>
-                            <div class="plan-price">150$</div>
+                            <div class="plan-price">150 CHF</div>
                             <div class="plan-period">pro Monat (bis zu 150 Klienten)</div>
                         </div>
                     </div>
@@ -696,7 +696,7 @@
                     <div class="term-icon">💰</div>
                     <div class="term-content">
                         <div class="term-value">Innovatives Coach-Royalty-Modell</div>
-                        <div class="stat-info">4$ pro vermitteltem Abonnent auf lebenslanger Basis</div>
+                        <div class="stat-info">4 CHF pro vermitteltem Abonnent auf lebenslanger Basis</div>
                     </div>
                 </div>
             </div>
@@ -746,7 +746,7 @@
                 <div class="term-icon">📊</div>
                 <div class="term-content">
                     <div class="term-value">CAC-Vergleich: 82% niedrigere Kundenakquisitionskosten</div>
-                    <div class="stat-info">Traditionelle Akquise: 22$ pro Kunde vs. Prometheus Royalty: 4$ pro Kunde</div>
+                    <div class="stat-info">Traditionelle Akquise: 22 CHF pro Kunde vs. Prometheus Royalty: 4 CHF pro Kunde</div>
                 </div>
             </div>
             
@@ -760,7 +760,7 @@
                         </li>
                         <li>
                             <div class="check-icon">✓</div>
-                            <span>4$ Royalty-Modell auch für Influencer</span>
+                            <span>4 CHF Royalty-Modell auch für Influencer</span>
                         </li>
                         <li>
                             <div class="check-icon">✓</div>
@@ -871,10 +871,11 @@
                         <div class="term-icon">👨‍💼</div>
                         <div class="term-content">
                             <div class="term-value">Gründer & CEO</div>
-                            <div style="color: white; margin: 5px 0;">Daniel Pauli</div>
+                            <div style="color: white; margin: 5px 0;">Daniele Pauli</div>
                             <div class="stat-info">
-                                • 10+ Jahre Erfahrung als Strength Coach<br>
+                                • 20+ Jahre Erfahrung als Strength Coach<br>
                                 • MSc in Sportwissenschaften<br>
+                                • Über 14.000 betreute Trainingseinheiten<br>
                                 • Spezialisierung auf Krafttraining und VBT
                             </div>
                         </div>
@@ -885,7 +886,7 @@
                         <div class="term-icon">👨‍💻</div>
                         <div class="term-content">
                             <div class="term-value">Technisches Team</div>
-                            <div style="color: white; margin: 5px 0;">Experten in KI und Sportwissenschaft</div>
+                            <div style="color: white; margin: 5px 0;">Archonit Team</div>
                             <div class="stat-info">
                                 • Computer Vision Spezialisten<br>
                                 • Erfahrene Full-Stack-Entwickler<br>
