--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -585,7 +585,6 @@
                 <div class="logo-icon" style="width: 60px; height: 60px; font-size: 30px;">⚡</div>
                 <div class="logo-text" style="font-size: 2.5rem;">PROMETHEUS</div>
             </div>
-            <h1 class="slide-title">PROMETHEUS</h1>
             <h2 class="slide-subtitle">Revolutionierung des Krafttrainings durch KI und VBT</h2>
             
             <div class="problem-statement">
@@ -924,28 +923,28 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>25.000</td>
-                                <td>90.000 CHF</td>
+                                <td>1.500</td>
+                                <td>298.500 CHF</td>
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td>75.000</td>
-                                <td>150.000 CHF</td>
+                                <td>3.000</td>
+                                <td>597.000 CHF</td>
                             </tr>
                             <tr>
                                 <td>3</td>
-                                <td>200.000</td>
-                                <td>240.000 CHF</td>
+                                <td>6.000</td>
+                                <td>1.194.000 CHF</td>
                             </tr>
                             <tr>
                                 <td>4</td>
-                                <td>450.000</td>
-                                <td>300.000 CHF</td>
+                                <td>10.000</td>
+                                <td>1.990.000 CHF</td>
                             </tr>
                             <tr>
                                 <td>5</td>
-                                <td>750.000</td>
-                                <td>360.000 CHF</td>
+                                <td>15.000</td>
+                                <td>2.985.000 CHF</td>
                             </tr>
                         </tbody>
                     </table>
@@ -964,28 +963,28 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>15%</td>
-                                <td class="roi-payment">13.500 CHF</td>
+                                <td>7%</td>
+                                <td class="roi-payment">20.895 CHF</td>
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td>15%</td>
-                                <td class="roi-payment">22.500 CHF</td>
+                                <td>7%</td>
+                                <td class="roi-payment">41.790 CHF</td>
                             </tr>
                             <tr>
                                 <td>3</td>
-                                <td>10%</td>
-                                <td class="roi-payment">24.000 CHF</td>
+                                <td>5%</td>
+                                <td class="roi-payment">59.700 CHF</td>
                             </tr>
                             <tr>
                                 <td>4</td>
-                                <td>10%</td>
-                                <td class="roi-payment">30.000 CHF</td>
+                                <td>4%</td>
+                                <td class="roi-payment">79.600 CHF</td>
                             </tr>
                             <tr>
                                 <td>5</td>
-                                <td>10%</td>
-                                <td class="roi-payment">36.000 CHF</td>
+                                <td>3%</td>
+                                <td class="roi-payment">48.015 CHF</td>
                             </tr>
                         </tbody>
                     </table>
@@ -993,11 +992,11 @@
                     <div class="summary-cards" style="grid-template-columns: repeat(2, 1fr);">
                         <div class="summary-card">
                             <div class="summary-label">Gesamtroyalty</div>
-                            <div class="summary-value">126.000 CHF</div>
+                            <div class="summary-value">250.000 CHF</div>
                         </div>
                         <div class="summary-card">
                             <div class="summary-label">ROI</div>
-                            <div class="summary-value">210% über 5 Jahre</div>
+                            <div class="summary-value">417% über 5 Jahre</div>
                         </div>
                     </div>
                 </div>
@@ -1009,6 +1008,7 @@
                     <div class="term-content">
                         <div class="term-label">Investition</div>
                         <div class="term-value">60.000 CHF für Royalty-Modell</div>
+                        <div class="stat-info">Royalty-Zahlungen gedeckelt bei 250.000 CHF Gesamtbetrag</div>
                     </div>
                 </div>
             </div>
@@ -1085,8 +1085,8 @@
                     <p>• Revolutionäre Technologie, die Krafttraining präziser und effektiver macht</p>
                     <p>• Win-Win-Geschäftsmodell für Sportler, Coaches und Investoren</p>
                     <p>• 82% niedrigere Kundenakquisitionskosten durch Royalty-Modell</p>
-                    <p>• 210% ROI über 5 Jahre ohne Eigenkapitalverwässerung</p>
-                    <p>• Attraktive Projektionen mit 750.000 Nutzern bis Jahr 5</p>
+                    <p>• 417% ROI über 5 Jahre ohne Eigenkapitalverwässerung</p>
+                    <p>• Realistische Projektionen mit 15.000 Nutzern bis Jahr 5</p>
                 </div>
                 
                 <div style="margin-top: 40px;">
