--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -1011,6 +1011,14 @@
                         <div class="stat-info">Royalty-Zahlungen gedeckelt bei 250.000 CHF Gesamtbetrag</div>
                     </div>
                 </div>
+                
+                <div class="term-card" style="margin-top: 30px;">
+                    <div class="term-icon">💰</div>
+                    <div class="term-content">
+                        <div class="term-value">Investitionsstruktur</div>
+                        <div class="stat-info">Direkte Finanzierung der Entwicklungssprints nach Fortschritt: 50% bei Sprint-Start, 50% nach erfolgreicher Sprint-Präsentation. Bisherige Investition (10.000 CHF) bereits durch Gründer getätigt.</div>
+                    </div>
+                </div>
             </div>
         </div>
         
@@ -1063,19 +1071,19 @@
             <div class="steps-list" style="margin-top: 40px;">
                 <div class="step-item">
                     <div class="step-number">1</div>
-                    <div class="step-text">Abschlussvereinbarung & Überweisung</div>
+                    <div class="step-text">Abschlussvereinbarung & Überweisung an Entwicklungskonto</div>
                 </div>
                 <div class="step-item">
                     <div class="step-number">2</div>
-                    <div class="step-text">Zugang zum Investoren-Dashboard</div>
+                    <div class="step-text">Zugang zum Investoren-Dashboard mit Sprint-Tracking</div>
                 </div>
                 <div class="step-item">
                     <div class="step-number">3</div>
-                    <div class="step-text">Regelmäßige Updates zur Entwicklung</div>
+                    <div class="step-text">Direkte Zahlung der Entwicklungsrechnungen (50% Sprint-Start, 50% nach Abnahme)</div>
                 </div>
                 <div class="step-item">
                     <div class="step-number">4</div>
-                    <div class="step-text">Integration in Slack-Development-Chat</div>
+                    <div class="step-text">Integration in Slack-Development-Chat für Sprint-Präsentationen</div>
                 </div>
                 <div class="step-item">
                     <div class="step-number">5</div>
