--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -1,25 +1,4 @@
-<div class="steps-list" style="margin-top: 40px;">
-                <div class="step-item">
-                    <div class="step-number">1</div>
-                    <div class="step-text">Abschlussvereinbarung & Überweisung an Entwicklungskonto</div>
-                </div>
-                <div class="step-item">
-                    <div class="step-number">2</div>
-                    <div class="step-text">Zugang zum Investoren-Dashboard mit Sprint-Tracking</div>
-                </div>
-                <div class="step-item">
-                    <div class="step-number">3</div>
-                    <div class="step-text">Direkte Zahlung der Entwicklungsrechnungen (50% Sprint-Start, 50% nach Abnahme)</div>
-                </div>
-                <div class="step-item">
-                    <div class="step-number">4</div>
-                    <div class="step-text">Integration in Slack-Development-Chat für Sprint-Präsentationen</div>
-                </div>
-                <div class="step-item">
-                    <div class="step-number">5</div>
-                    <div class="step-text">Teilnahme an 2 Team-Calls pro Monat</div>
-                </div>
-            </div><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -587,6 +566,7 @@
 </head>
 <body>
     <div class="pitch-container">
+        <!-- Nur die Navigation sollte hier sein, nicht die Investorenschritte -->
         <div class="nav-controls">
             <div class="logo">
                 <div class="logo-icon">⚡</div>
@@ -1167,6 +1147,31 @@
                 <div style="text-align: center;">
                     <div style="color: #999;">High risk</div>
                     <div style="font-size: 1.2rem; font-weight: bold;">70.000 CHF</div>
+                </div>
+            </div>
+            
+            <h3 style="margin-top: 40px; color: #ff6600;">Investoren-Beteiligung</h3>
+            
+            <div class="steps-list" style="margin-top: 20px;">
+                <div class="step-item">
+                    <div class="step-number">1</div>
+                    <div class="step-text">Abschlussvereinbarung & Überweisung an Entwicklungskonto</div>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">2</div>
+                    <div class="step-text">Zugang zum Investoren-Dashboard mit Sprint-Tracking</div>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">3</div>
+                    <div class="step-text">Direkte Zahlung der Entwicklungsrechnungen (50% Sprint-Start, 50% nach Abnahme)</div>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">4</div>
+                    <div class="step-text">Integration in Slack-Development-Chat für Sprint-Präsentationen</div>
+                </div>
+                <div class="step-item">
+                    <div class="step-number">5</div>
+                    <div class="step-text">Teilnahme an 2 Team-Calls pro Monat</div>
                 </div>
             </div>
         </div>
