--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -952,42 +952,54 @@
                 
                 <div class="column">
                     <h3 class="column-title">Investor ROI</h3>
-                    <table class="roi-table">
-                        <thead>
-                            <tr>
-                                <th>Jahr</th>
-                                <th>Royalty %</th>
-                                <th>Auszahlung</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>7%</td>
-                                <td class="roi-payment">20.895 CHF</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>7%</td>
-                                <td class="roi-payment">41.790 CHF</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>5%</td>
-                                <td class="roi-payment">59.700 CHF</td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>4%</td>
-                                <td class="roi-payment">79.600 CHF</td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td>3%</td>
-                                <td class="roi-payment">48.015 CHF</td>
-                            </tr>
-                        </tbody>
-                    </table>
+<table class="roi-table">
+    <thead>
+        <tr>
+            <th>Jahr</th>
+            <th>Nutzer</th>
+            <th>Umsatz</th>
+            <th>Op. Kosten</th>
+            <th>Netto</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>1.500</td>
+            <td>298.500 CHF</td>
+            <td>13.500 CHF</td>
+            <td>285.000 CHF</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>3.000</td>
+            <td>597.000 CHF</td>
+            <td>18.900 CHF</td>
+            <td>578.100 CHF</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>6.000</td>
+            <td>1.194.000 CHF</td>
+            <td>29.800 CHF</td>
+            <td>1.164.200 CHF</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>10.000</td>
+            <td>1.990.000 CHF</td>
+            <td>42.500 CHF</td>
+            <td>1.947.500 CHF</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>15.000</td>
+            <td>2.985.000 CHF</td>
+            <td>58.700 CHF</td>
+            <td>2.926.300 CHF</td>
+        </tr>
+    </tbody>
+</table>
                     
                     <div class="summary-cards" style="grid-template-columns: repeat(2, 1fr);">
                         <div class="summary-card">
