--- a/pitch-kawasaki.html
+++ b/pitch-kawasaki.html
@@ -693,14 +693,17 @@
                 </div>
                 
                 <div class="term-card" style="margin-top: 30px;">
-                    <div class="term-icon">💰</div>
-                    <div class="term-content">
-                        <div class="term-value">Innovatives Coach-Royalty-Modell</div>
-                        <div class="stat-info">4 CHF pro vermitteltem Abonnent auf lebenslanger Basis</div>
-                    </div>
-                </div>
-            </div>
+    <div class="term-icon">💡</div>
+    <div class="term-content">
+        <div class="term-value">Kosteneffiziente Architektur</div>
+        <div class="stat-info">
+            • On-Device-Verarbeitung: Videos und Analysen verbleiben auf Nutzergeräten<br>
+            • Cloud-Kosten: Nur Metriken und Datenpunkte werden gespeichert<br>
+            • Wartungskosten: 7.500 CHF/Jahr (Belarus-Entwicklerteam, 35 CHF/Stunde)<br>
+            • Skalierbarkeit: Kosten wachsen deutlich langsamer als Nutzerbasis und Umsatz
         </div>
+    </div>
+</div>
         
         <!-- Slide 4: TECHNOLOGIE -->
         <div class="slide" id="slide4">
