--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             // Überprüfung der Zugangsdaten
             if (email === "Prometheusdev78@gmail.com" && password === "Prometheus2025") {
                 // Bei erfolgreicher Authentifizierung zur Pitch-Seite weiterleiten
-                window.location.href = 'pitch-kawasaki.html';
+                window.location.href = 'pitch.html';
             } else {
                 // Fehlermeldung anzeigen
                 errorMessage.style.display = 'block';
