--- a/pitch.html
+++ b/pitch.html
@@ -696,6 +696,7 @@
                 </div>
             </div>
         </div>
+        </div>
         
         <!-- Coach Dashboard -->
         <div class="showcase-section" style="background-color: #222; border-radius: 10px; padding: 20px; display: flex; flex-direction: column;">
