--- a/pitch.html
+++ b/pitch.html
@@ -829,7 +829,7 @@
             <div class="term-content">
                 <div class="term-value">Kosteneffiziente Architektur</div>
                 <div class="stat-info">
-                    • On-Device-Verarbeitung: Videos und Analysen verbleiben auf Nutzergeräten<br>
+                    • On Device Verarbeitung: Videos und Analysen verbleiben auf Nutzergeräten<br>
                     • Cloud-Kosten: Nur Metriken und Datenpunkte werden gespeichert<br>
                     • Wartungskosten: 7.500 CHF/Jahr<br>
                     • Skalierbarkeit: Kosten wachsen deutlich langsamer als Nutzerbasis und Umsatz
