--- a/pitch.html
+++ b/pitch.html
@@ -896,18 +896,18 @@
         </div>
 
         <!-- Ernährung Features -->
-        <div class="showcase-section">
-            <h3 class="section-title">Ernährung Features</h3>
-            <div class="img-container">
-                <img src="images/image9.jpg" alt="Nutrition Features" />
-            </div>
-            <div class="feature-list">
-                <div class="feature-item">Individualisierte Ernährungspläne</div>
-                <div class="feature-item">Leistungsorientierte Ernährungsverfolgung</div>
-                <div class="feature-item">Datenfusion zwischen Training & Ernährung</div>
-                <div class="feature-item">Fortschrittsabhängige Anpassungen</div>
-            </div>
-        </div>
+<div class="showcase-section">
+    <h3 class="section-title">Ernährung Features</h3>
+    <div class="img-container" style="height: 580px; overflow: hidden;">
+        <img src="images/image9.jpg" alt="Nutrition Features" style="object-fit: contain; object-position: top;" />
+    </div>
+    <div class="feature-list">
+        <div class="feature-item">Individualisierte Ernährungspläne</div>
+        <div class="feature-item">Leistungsorientierte Ernährungsverfolgung</div>
+        <div class="feature-item">Datenfusion zwischen Training & Ernährung</div>
+        <div class="feature-item">Fortschrittsabhängige Anpassungen</div>
+    </div>
+</div>
     </div>
 </div>
 
