--- a/pitch.html
+++ b/pitch.html
@@ -911,62 +911,73 @@
     </div>
 </div>
 
-<!-- Separate Slide für Coach Software -->
+<!-- Slide: COACH SOFTWARE -->
 <div class="slide" id="slideCoachSoftware">
     <h1 class="slide-title">COACH-SOFTWARE</h1>
 
-    <div class="showcase-intro">
-        <p>Leistungsstarkes Werkzeug für professionelle Coaches mit unbegrenztem Klientenmanagement</p>
+    <div class="showcase-intro" style="text-align: center; margin-bottom: 20px;">
+        <p style="font-size: 1.2rem; color: #ddd; max-width: 800px; margin: 0 auto;">
+            Leistungsstarkes Werkzeug für professionelle Coaches mit unbegrenztem Klientenmanagement
+        </p>
     </div>
 
-    <div class="coach-container">
-        <!-- Linke Spalte: Dashboard -->
-        <div class="coach-section">
-            <h3 class="section-title">Interaktives Dashboard</h3>
-            <div class="img-container">
-                <img src="images/image4.jpg" alt="Coach Dashboard" />
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 25px; margin-bottom: 20px;">
+        <!-- Linke Spalte: Großes Dashboard-Bild -->
+        <div style="background-color: #222; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
+            <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Interaktives Dashboard</h3>
+
+            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
+                <img src="images/image4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
-            <div class="feature-list">
-                <div class="feature-item">KI-gestütztes Engagement-Tracking der Klienten</div>
-                <div class="feature-item">Automatische Erkennung von Interventionsbedarf</div>
-                <div class="feature-item">Leistungsbasierte Alarme und Benachrichtigungen</div>
+
+            <div style="margin-top: 15px;">
+                <div style="font-size: 0.9rem; color: #ddd; margin-bottom: 8px;">• KI-gestütztes Engagement-Tracking der Klienten</div>
+                <div style="font-size: 0.9rem; color: #ddd; margin-bottom: 8px;">• Automatische Erkennung von Interventionsbedarf</div>
+                <div style="font-size: 0.9rem; color: #ddd;">• Leistungsbasierte Alarme und Benachrichtigungen</div>
             </div>
         </div>
 
-        <!-- Rechte Spalte: Klientendetails -->
-        <div class="coach-section">
-            <h3 class="section-title">Detaillierte Klientenanalyse</h3>
-            <div class="img-container">
-                <img src="images/image6.jpg" alt="Client Details" />
+        <!-- Rechte Spalte: Klientendetails und Analytics -->
+        <div style="background-color: #222; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
+            <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Detaillierte Klientenanalyse</h3>
+
+            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
+                <img src="images/image6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
-            <div class="feature-list">
-                <div class="feature-item">Tiefgreifende Fortschrittsanalyse für jeden Klienten</div>
-                <div class="feature-item">Automatische Trainingspläne mit KI-Unterstützung</div>
-                <div class="feature-item">Sofortige Anpassung basierend auf Leistungsdaten</div>
+
+            <div style="margin-top: 15px;">
+                <div style="font-size: 0.9rem; color: #ddd; margin-bottom: 8px;">• Tiefgreifende Fortschrittsanalyse für jeden Klienten</div>
+                <div style="font-size: 0.9rem; color: #ddd; margin-bottom: 8px;">• Automatische Trainingspläne mit KI-Unterstützung</div>
+                <div style="font-size: 0.9rem; color: #ddd;">• Sofortige Anpassung basierend auf Leistungsdaten</div>
             </div>
         </div>
     </div>
 
-    <div class="two-columns">
-        <div class="term-card">
-            <div class="term-icon">💰</div>
-            <div class="term-content">
-                <div class="term-value">Passives Einkommensmodell</div>
-                <div class="stat-info">
-                    Coaches verdienen eine Provision von 4 CHF pro Monat für jeden Klienten, der die App nutzt – unabhängig davon, ob aktiv betreut oder nicht.
+    <div class="two-columns" style="margin-top: 20px;">
+        <div class="column">
+            <div class="term-card" style="height: 100%;">
+                <div class="term-icon">💰</div>
+                <div class="term-content">
+                    <div class="term-value">Passives Einkommensmodell</div>
+                    <div class="stat-info">
+                        Coaches verdienen eine Provision von 4 CHF pro Monat für jeden Klienten, der die App nutzt – unabhängig davon, ob aktiv betreut oder nicht.
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="term-card">
-            <div class="term-icon">🚀</div>
-            <div class="term-content">
-                <div class="term-value">Skalierbare Klientenverwaltung</div>
-                <div class="stat-info">
-                    Ein Jahr kostenlose Nutzung und danach flexible Optionen für 50, 100 oder 150 Klienten – mit vollem Zugriff auf alle Features.
+        <div class="column">
+            <div class="term-card" style="height: 100%;">
+                <div class="term-icon">🚀</div>
+                <div class="term-content">
+                    <div class="term-value">Skalierbare Klientenverwaltung</div>
+                    <div class="stat-info">
+                        Ein Jahr kostenlose Nutzung und danach flexible Optionen für 50, 100 oder 150 Klienten – mit vollem Zugriff auf alle Features.
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
     <div class="term-card">
         <div class="term-icon">⚡</div>
