--- a/pitch.html
+++ b/pitch.html
@@ -871,7 +871,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Training Features</h3>
             <div class="img-container">
-                <img src="images/image3.jpg" alt="Training Features" />
+                <img src="images/images3.jpg" alt="Training Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Trainingsübersicht & Fortschrittsverfolgung</div>
@@ -885,7 +885,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Analyse Features</h3>
             <div class="img-container">
-                <img src="images/image8.jpg" alt="Analysis Features" />
+                <img src="images/images8.jpg" alt="Analysis Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Detaillierte Fortschrittsanalyse</div>
@@ -899,7 +899,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Ernährung Features</h3>
             <div class="img-container">
-                <img src="images/image9.jpg" alt="Nutrition Features" />
+                <img src="images/images9.jpg" alt="Nutrition Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Individualisierte Ernährungspläne</div>
@@ -923,11 +923,11 @@
 
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 25px; margin-bottom: 20px;">
         <!-- Linke Spalte: Großes Dashboard-Bild -->
-        <div style="background-color: #222; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
+        <div style="background-color: #111; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Interaktives Dashboard</h3>
 
             <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
-                <img src="images/image4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
+                <img src="images/images4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
             <div style="margin-top: 15px;">
@@ -938,11 +938,11 @@
         </div>
 
         <!-- Rechte Spalte: Klientendetails und Analytics -->
-        <div style="background-color: #222; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
+        <div style="background-color: #111; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Detaillierte Klientenanalyse</h3>
 
             <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
-                <img src="images/image6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
+                <img src="images/images6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
             <div style="margin-top: 15px;">
@@ -955,7 +955,7 @@
 
     <div class="two-columns" style="margin-top: 20px;">
         <div class="column">
-            <div class="term-card" style="height: 100%;">
+            <div class="term-card" style="height: 100%; background-color: #111;">
                 <div class="term-icon">💰</div>
                 <div class="term-content">
                     <div class="term-value">Passives Einkommensmodell</div>
@@ -966,7 +966,7 @@
             </div>
         </div>
         <div class="column">
-            <div class="term-card" style="height: 100%;">
+            <div class="term-card" style="height: 100%; background-color: #111;">
                 <div class="term-icon">🚀</div>
                 <div class="term-content">
                     <div class="term-value">Skalierbare Klientenverwaltung</div>
@@ -977,31 +977,31 @@
             </div>
         </div>
     </div>
-</div>
 
-    <div class="term-card">
+    <!-- Die On-Device-Box INNERHALB der Coach-Software-Folie -->
+    <div class="term-card" style="margin-top: 20px; background-color: rgba(255, 102, 0, 0.1); border: 1px solid #ff6600;">
         <div class="term-icon">⚡</div>
         <div class="term-content">
-            <h4>On Device Verarbeitung für maximale Privatsphäre & Effizienz</h4>
-            <p>Videos und Analysen verbleiben auf dem Gerät des Nutzers, nur Metriken werden in der Cloud gespeichert. Diese Architektur senkt drastisch die Cloud-Kosten und schützt die Privatsphäre der Nutzer.</p>
+            <h4 style="font-size: 1.2rem; font-weight: bold; color: white; margin-bottom: 5px;">On Device Verarbeitung für maximale Privatsphäre & Effizienz</h4>
+            <p style="color: #ddd; font-size: 0.95rem; line-height: 1.5;">Videos und Analysen verbleiben auf dem Gerät des Nutzers, nur Metriken werden in der Cloud gespeichert. Diese Architektur senkt drastisch die Cloud-Kosten und schützt die Privatsphäre der Nutzer.</p>
         </div>
     </div>
 </div>
 
-        <!-- Slide 3: GESCHÄFTSMODELL -->
+<!-- Slide 3: GESCHÄFTSMODELL -->
 <div class="slide" id="slide3">
     <h1 class="slide-title">GESCHÄFTSMODELL</h1>
 
     <div class="pricing-container">
-        <div class="pricing-card">
+        <div class="pricing-card" style="background-color: #111;">
             <h3 class="pricing-title">Athleten-App</h3>
             <div class="pricing-plans">
-                <div class="plan">
+                <div class="plan" style="background-color: #111;">
                     <div class="plan-name">Monatlich</div>
                     <div class="plan-price">19,99 CHF</div>
                     <div class="plan-period">pro Monat</div>
                 </div>
-                <div class="plan">
+                <div class="plan" style="background-color: #111;">
                     <div class="plan-name">Jährlich</div>
                     <div class="plan-price">199 CHF</div>
                     <div class="plan-period">pro Jahr (16% Ersparnis)</div>
